<resources>
    <string name="app_name">MPG Tracker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_trip">Add Trip</string>

    <!--Common Strings-->
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="delete">Delete</string>

    <!--Accessibility-->
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!--Top Fragment-->
    <string name="vehicles_nav_menu_title">Vehicles</string>

    <!--Trip List Menu-->
    <string name="delete_all_trips">Delete All Trips</string>

    <!--Trip List Fragment-->
    <string name="trips_title">Trips</string>
    <string name="no_trips">You have no trips for this vehicle</string>
    <string name="add_a_trip">Add a Trip</string>

    <!--Trip Edit Fragment-->
    <string name="edit_trip_title">Edit Trip</string>
    <string name="create_trip_title">Add Trip</string>
    <string name="date">Date</string>
    <string name="trip_distance_label">Trip Distance</string>
    <string name="pump_info">Pump Info</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="total_cost_label">Total Cost</string>
    <string name="volume_label">Fuel Volume</string>
    <string name="odometer_label">Odometer</string>
    <string name="filled_tank_label">Filled Tank</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="auto_calc">Auto Calc</string>
    <string name="distance_missing">Distance required.</string>
    <string name="distance_correct_format">Invalid distance value. Must be greater than 0.</string>
    <string name="cost_missing">Cost required.</string>
    <string name="cost_correct_format">Invalid cost value. Must be greater than 0.</string>
    <string name="volume_missing">Volume required.</string>
    <string name="volume_correct_format">Invalid volume value. Must be greater than 0.</string>
    <string name="odometer_missing">Odometer reading required.</string>
    <string name="odometer_correct_format">Invalid odometer value. Must be greater than previous trip.</string>
    <string name="delete_trip_dialog_title">Delete Trip?</string>
    <string name="delete_trip_dialog_message">Are you sure you want to delete this trip? This action cannot be undone.</string>
    <string name="trip_deleted">Trip Deleted</string>

    <!--Graphs Fragment-->
    <string name="graphs_title">Graphs</string>
    <string name="fuel_efficiency_over_time">Fuel Efficiency Over Time</string>
    <string name="distance_over_time">Distance Over Time</string>
    <string name="cost_over_time">Cost Over Time</string>
    <string name="one_month">1 Month</string>
    <string name="three_months">3 Months</string>
    <string name="one_year">1 Year</string>
    <string name="all_time">All</string>

    <!--Settings Fragment-->
    <string name="settings_title">Settings</string>
    <string name="default_filled">Default to Tank Filled</string>
    <string name="default_filled_summary">By default, tank filled property will be checked</string>
    <string name="units">Units</string>
    <string name="units_summary">Select the type of units for your country.</string>
    <string name="imperial">Imperial/US</string>
    <string name="metric">Metric</string>
    <string-array name="units_array">
        <item>@string/imperial</item>
        <item>@string/metric</item>
    </string-array>

    <string name="trip_creation">Trip Creation</string>
    <string name="about">About</string>
    <string name="version_header">Version</string>
    <string name="version">v1.0.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>


    <!--Stats Fragment-->
    <string name="stats_title">Stats</string>
    <string name="fuel_efficiency">Fuel Efficiency</string>
    <string name="cost">Cost</string>
    <string name="distance">Distance</string>

    <string name="efficiency_header">Efficiency</string>
    <string name="average_efficiency">Average Efficiency</string>
    <string name="best_efficiency">Best Efficiency</string>
    <string name="worst_efficiency">Worst Efficiency</string>

    <string name="average">Average</string>
    <string name="best">Best</string>
    <string name="worst">Worst</string>

    <string name="distance_header">Distance</string>
    <string name="average_distance">Average Trip Distance</string>
    <string name="longest_trip">Longest Trip</string>
    <string name="shortest_trip">Shortest Trip</string>
    <string name="total_distance">Total Distance Driven</string>

    <string name="cost_header">Cost</string>
    <string name="average_cost">Average Trip Cost</string>
    <string name="highest_cost">Highest Costing Trip</string>
    <string name="lowest_cost">Lowest Costing Trip</string>
    <string name="total_cost">Total Spent On All Trips</string>

    <string name="fuel_header">Fuel</string>
    <string name="average_trip">Average Trip</string>
    <string name="most">Most</string>
    <string name="least">Least</string>
    <string name="total">Total</string>

    <!--Trip List Item-->
    <string name="tank_filled_notification">Tank Filled</string>

    <!--Navigation Menu-->
    <string name="menu">Menu</string>
    <string name="trips_nav_menu_title">Trips</string>
    <string name="expenses_nav_menu_title">Expenses</string>
    <string name="stats_nav_menu_title">Stats</string>
    <string name="settings_nav_menu_title">Settings</string>

    <!--Vehicle List Fragment-->
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="no_vehicles">You have no vehicles</string>
    <string name="add_a_vehicle">Add A Vehicle</string>

    <!--Vehicle Edit Fragment-->
    <string name="edit_vehicle_title">Edit Vehicle</string>
    <string name="create_vehicle_title">Add Vehicle</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="primary_driver">Primary Driver</string>
    <string name="license_plate">License Plate</string>
    <string name="vin">VIN</string>
    <string name="insurance_policy">Insurance Policy</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="delete_vehicle_button_label">Delete Vehicle</string>
    <string name="delete_vehicle_dialog_title">Delete Vehicle?</string>
    <string name="delete_vehicle_dialog_message">Are you sure you want to delete this vehicle? This action cannot be undone.</string>
    <string name="vehicle_deleted">Vehicle Deleted</string>

    <!--Expense List Fragment-->
    <string name="no_expenses">You have no expenses for this vehicle</string>
    <string name="add_an_expense">Add an Expense</string>

    <!--Expense Edit Fragment-->
    <string name="create_expense_title">Create Expense</string>
    <string name="edit_expense_title">Edit Expense</string>
    <string name="category">Expense Category</string>
    <string name="expense_info">Expense Info</string>
    <string name="title_label">Title</string>
    <string name="note">Note</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="delete_expense_dialog_title">Delete Expense?</string>
    <string name="delete_expense_dialog_message">Are you sure you want to delete this expense? This action cannot be undone.</string>
    <string name="expense_deleted">Expense deleted.</string>
    <string name="expense_type_prompt">Select Expense Category</string>
    <string name="required">Required</string>

    <string-array name="expense_types">
        <item>Insurance</item>
        <item>Service</item>
        <item>Maintenance</item>
        <item>Registration</item>
        <item>Parking</item>
        <item>Wash</item>
        <item>Toll</item>
        <item>Ticket/Fine</item>
        <item>Tuning</item>
        <item>Other</item>
    </string-array>

    <!--Unit Labels and Titles-->
    <string name="l">l</string>
    <string name="km">km</string>
    <string name="km_per_l">km/l</string>
    <string name="gal">gal</string>
    <string name="miles">miles</string>
    <string name="mpg">mpg</string>
    <string name="MPG">MPG</string>
    <string name="KM_per_L">Km/L</string>
    <string name="Gallons">Gallons</string>
    <string name="Liters">Liters</string>

</resources>
