<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:context="com.mpgtracker.fragments.TripEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:entries="@array/expense_types"
                    android:prompt="@string/expense_type_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_info"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_label"
                        android:inputType="textCapWords"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cost_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cost"
                        android:inputType="numberDecimal"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/date_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/date"
                        android:longClickable="false"
                        android:singleLine="true"
                        tools:text="3/14/2018" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/odometer_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/odometer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/odometer_label"
                        android:inputType="numberDecimal"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/note_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note"
                        android:inputType="textCapSentences|textMultiLine"
                        android:singleLine="false"
                        tools:text="Note that needs to be really long so I can see what it does when it goes to more than one line." />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/delete_expense_card"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/delete_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/alert"
                    android:text="@string/delete_expense"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>