<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/descrtiption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/make_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/make"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/make"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/model_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/model"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/year_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/year"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/license_plate_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/license_plate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/license_plate"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vin_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/vin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vin"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/insurance_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/insurance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insurance_policy"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/active" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>